[project]
name = "bigym"
version = "4.0.0"
description = "Bigym: Benchmark suite and environments for embodied learning with MuJoCo."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Nikita Cherniadev", email = "nikita.chernyadev@gmail.com" }
]
dependencies = [
    # includes bugfix in mujoco_rendering
    "gymnasium @ git+https://git@github.com/stepjam/Gymnasium.git@0.29.2",
    # pyquaternion doesn't support 2.x yet
    "numpy==1.26.*",
    "safetensors==0.3.3",
    # WARNING: recorded demos might break when updating Mujoco
    "mujoco==3.1.5",
    # needed for pyMJCF
    "dm_control==1.0.19",
    "imageio",
    "pyquaternion",
    "mujoco_utils",
    "wget",
    "mojo @ git+https://git@github.com/stepjam/mojo.git@0.1.1",
    "pyyaml",
    "dearpygui",
    "pyopenxr==1.1.3601",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
]
examples = [
    "moviepy",
    "pygame",
    "opencv-python",
    "matplotlib",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
